# EquMot

./: .gitignore  CMakeLists.txt  EulerFW_mene.txt  README.md  Verlet_mene.txt  Verlet_mene_SS.txt  Verlet_mene_SS_SEJS.txt  main.cpp
include/: Contants.hpp  TIntegrator.hpp  TMatrixtriang.hpp  TParticle.hpp  TPlot.hpp  TVector.hpp
src/: TIntegrator.cpp  TMatrixtriang.cpp  TParticle.cpp  TPlot.cpp  TVector.cpp  test_SolarSystem.cpp  test_force_cxx.cpp  test_force_integrator_cxx.cpp  test_force_openmp.cpp  test_force_seq.cpp  test_force_triang_openmp.cpp  test_force_triang_seq.cpp  test_full_cxx.cpp  test_full_tbb.cpp
